Fix nav and main not stretching 100vh

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+body, html {
+    height: 100%;
+}
 .flex,
 .flex-col,
 .centered-flex {
@@ -16,8 +19,7 @@
     align-items: center;
 }
 body > .container {
-    min-height: 100vh;
-    padding: 15px 0px;
+    height: 100vh;
 }
 nav {
     flex: 1;
@@ -26,6 +28,7 @@ nav {
     padding: 1rem;
     gap: 1rem;
     max-width: 230px;
+    height: 100%;
 }
 nav div {
     gap: 10px;
@@ -83,6 +86,7 @@ nav .user-projects .project-header .add-project {
 }
 main {
     flex: 4;
+    height: 100%;
 }
 .icon {
     width: 30px;
